fixed last week link + refactoring

--- a/jira-reports.html
+++ b/jira-reports.html
@@ -8,14 +8,8 @@
 <script type="text/javascript" src="date.js">
 
 
-
 </script>
-<div>
-    <a href="https://jiraeu.epam.com/secure/TimesheetReport.jspa?reportKey=jira-timesheet-plugin%3Areport">Last week</a>
-</div>
-<span id="where_to_insert">
-
-</span>
+<span id="where_to_insert"></span>
 
 </body>
 
