--- a/jira-reports.html
+++ b/jira-reports.html
@@ -2,14 +2,17 @@
 <head>
     <meta charset="utf-8">
     <title>Jira reports</title>
+    <style>
+        table, th, td {
+            border: 1px solid;
+            border-collapse: collapse
+        }
+    </style>
 </head>
 
 <body>
-<script type="text/javascript" src="date.js">
+<script type="text/javascript" src="date.js"></script>
 
-
-</script>
-<span id="where_to_insert"></span>
 
 </body>
 
