--- a/jira-reports.html
+++ b/jira-reports.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<script type="text/javascript" src="date.js"></script>
+<script type="module" src="date.js"></script>
 
 
 </body>
